--- a/Calendar/form.ui
+++ b/Calendar/form.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>753</width>
-    <height>452</height>
+    <width>690</width>
+    <height>450</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -18,7 +18,7 @@
     <rect>
      <x>20</x>
      <y>120</y>
-     <width>381</width>
+     <width>401</width>
      <height>41</height>
     </rect>
    </property>
@@ -31,7 +31,7 @@
     <rect>
      <x>20</x>
      <y>260</y>
-     <width>381</width>
+     <width>401</width>
      <height>25</height>
     </rect>
    </property>
@@ -39,104 +39,12 @@
     <string/>
    </property>
   </widget>
-  <widget class="QLineEdit" name="start">
-   <property name="geometry">
-    <rect>
-     <x>20</x>
-     <y>170</y>
-     <width>61</width>
-     <height>25</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>开始：</string>
-   </property>
-  </widget>
-  <widget class="QLineEdit" name="end">
-   <property name="geometry">
-    <rect>
-     <x>20</x>
-     <y>210</y>
-     <width>61</width>
-     <height>25</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>结束：</string>
-   </property>
-  </widget>
-  <widget class="QDateEdit" name="SdateEdit">
-   <property name="geometry">
-    <rect>
-     <x>80</x>
-     <y>170</y>
-     <width>110</width>
-     <height>25</height>
-    </rect>
-   </property>
-  </widget>
-  <widget class="QDateEdit" name="EdateEdit">
-   <property name="geometry">
-    <rect>
-     <x>80</x>
-     <y>210</y>
-     <width>110</width>
-     <height>25</height>
-    </rect>
-   </property>
-  </widget>
-  <widget class="QTimeEdit" name="startTimeEdit">
-   <property name="geometry">
-    <rect>
-     <x>190</x>
-     <y>170</y>
-     <width>118</width>
-     <height>25</height>
-    </rect>
-   </property>
-  </widget>
-  <widget class="QTimeEdit" name="endTimeEdit">
-   <property name="geometry">
-    <rect>
-     <x>190</x>
-     <y>210</y>
-     <width>118</width>
-     <height>25</height>
-    </rect>
-   </property>
-   <property name="time">
-    <time>
-     <hour>23</hour>
-     <minute>59</minute>
-     <second>59</second>
-    </time>
-   </property>
-  </widget>
-  <widget class="QCheckBox" name="checkBox">
-   <property name="geometry">
-    <rect>
-     <x>320</x>
-     <y>170</y>
-     <width>98</width>
-     <height>23</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>全天</string>
-   </property>
-   <property name="checked">
-    <bool>true</bool>
-   </property>
-   <property name="autoRepeat">
-    <bool>false</bool>
-   </property>
-  </widget>
   <widget class="QTextEdit" name="event">
    <property name="geometry">
     <rect>
      <x>20</x>
      <y>300</y>
-     <width>381</width>
+     <width>401</width>
      <height>87</height>
     </rect>
    </property>
@@ -146,7 +54,7 @@
     <rect>
      <x>20</x>
      <y>30</y>
-     <width>422</width>
+     <width>581</width>
      <height>32</height>
     </rect>
    </property>
@@ -161,13 +69,6 @@
        </widget>
       </item>
      </layout>
-    </item>
-    <item>
-     <widget class="QPushButton" name="delete_2">
-      <property name="text">
-       <string>删除</string>
-      </property>
-     </widget>
     </item>
     <item>
      <spacer name="horizontalSpacer">
@@ -211,6 +112,89 @@
        </widget>
       </item>
      </layout>
+    </item>
+   </layout>
+  </widget>
+  <widget class="QWidget" name="">
+   <property name="geometry">
+    <rect>
+     <x>20</x>
+     <y>210</y>
+     <width>401</width>
+     <height>27</height>
+    </rect>
+   </property>
+   <layout class="QHBoxLayout" name="horizontalLayout_4">
+    <item>
+     <widget class="QLabel" name="label_3">
+      <property name="maximumSize">
+       <size>
+        <width>40</width>
+        <height>16777215</height>
+       </size>
+      </property>
+      <property name="text">
+       <string>结束：</string>
+      </property>
+     </widget>
+    </item>
+    <item>
+     <widget class="QDateEdit" name="EdateEdit"/>
+    </item>
+    <item>
+     <widget class="QTimeEdit" name="endTimeEdit">
+      <property name="time">
+       <time>
+        <hour>23</hour>
+        <minute>59</minute>
+        <second>59</second>
+       </time>
+      </property>
+     </widget>
+    </item>
+   </layout>
+  </widget>
+  <widget class="QWidget" name="">
+   <property name="geometry">
+    <rect>
+     <x>20</x>
+     <y>170</y>
+     <width>581</width>
+     <height>27</height>
+    </rect>
+   </property>
+   <layout class="QHBoxLayout" name="horizontalLayout_5">
+    <item>
+     <widget class="QLabel" name="label_2">
+      <property name="maximumSize">
+       <size>
+        <width>40</width>
+        <height>16777215</height>
+       </size>
+      </property>
+      <property name="text">
+       <string>开始：</string>
+      </property>
+     </widget>
+    </item>
+    <item>
+     <widget class="QDateEdit" name="SdateEdit"/>
+    </item>
+    <item>
+     <widget class="QTimeEdit" name="startTimeEdit"/>
+    </item>
+    <item>
+     <widget class="QCheckBox" name="checkBox">
+      <property name="text">
+       <string>全天</string>
+      </property>
+      <property name="checked">
+       <bool>true</bool>
+      </property>
+      <property name="autoRepeat">
+       <bool>false</bool>
+      </property>
+     </widget>
     </item>
    </layout>
   </widget>
