--- a/Calendar/to_do_list.ui
+++ b/Calendar/to_do_list.ui
@@ -6,45 +6,24 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>934</width>
-    <height>614</height>
+    <width>940</width>
+    <height>620</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>Form</string>
   </property>
-  <widget class="QWidget" name="widget" native="true">
+  <widget class="QWidget" name="">
    <property name="geometry">
     <rect>
-     <x>50</x>
-     <y>40</y>
-     <width>861</width>
+     <x>60</x>
+     <y>30</y>
+     <width>791</width>
      <height>551</height>
     </rect>
    </property>
    <layout class="QGridLayout" name="gridLayout">
-    <item row="1" column="0">
-     <widget class="QPushButton" name="changeEvent">
-      <property name="text">
-       <string>修改事件</string>
-      </property>
-     </widget>
-    </item>
-    <item row="1" column="1">
-     <widget class="QPushButton" name="Deleteitem">
-      <property name="text">
-       <string>删除选中事件</string>
-      </property>
-     </widget>
-    </item>
-    <item row="1" column="2">
-     <widget class="QPushButton" name="seleteall">
-      <property name="text">
-       <string>全选</string>
-      </property>
-     </widget>
-    </item>
-    <item row="0" column="0" colspan="3">
+    <item row="0" column="0">
      <widget class="QTableWidget" name="tableWidget">
       <property name="gridStyle">
        <enum>Qt::SolidLine</enum>
@@ -56,6 +35,31 @@
        <number>0</number>
       </property>
      </widget>
+    </item>
+    <item row="1" column="0">
+     <layout class="QHBoxLayout" name="horizontalLayout">
+      <item>
+       <widget class="QPushButton" name="changeEvent">
+        <property name="text">
+         <string>修改事件</string>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QPushButton" name="Deleteitem">
+        <property name="text">
+         <string>删除选中事件</string>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QPushButton" name="seleteall">
+        <property name="text">
+         <string>全选</string>
+        </property>
+       </widget>
+      </item>
+     </layout>
     </item>
    </layout>
   </widget>
